--- a/source/form.html
+++ b/source/form.html
@@ -9,23 +9,23 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo-first" href="index.html">
-      <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
-    </a>
-    <a class="page-header__logo-second" href="index.html">
-      <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
-    </a>
     <nav class="main-navigation">
+      <a class="page-header__logo-first" href="index.html">
+        <img src="https://via.placeholder.com/33x37" alt="Интернет магазин «Кэт энерджи»">
+      </a>
+      <a class="page-header__logo-second" href="index.html">
+        <img src="https://via.placeholder.com/101x18" alt="Интернет магазин «Кэт энерджи»">
+      </a>
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-navigation__list list">
-        <li class="main-navigation__item list__item">
-          <a href="index.html">Главная</a>
+        <li class="main-navigation__item">
+          <a class="list__link" href="index.html">Главная</a>
         </li>
-        <li class="main-navigation__item list__item">
-          <a href="catalog.html">Каталог продукции</a>
+        <li class="main-navigation__item">
+          <a class="list__link" href="catalog.html">Каталог продукции</a>
         </li>
-        <li class="main-navigation__item list__item list__item--current">
-          <a>Подбор программы</a>
+        <li class="main-navigation__item main-navigation__item--current">
+          <a class="list__link">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -35,65 +35,65 @@
     <p class="page-main__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
     <form class="page-main__form form" action="https://echo.htmlacademy.ru" method="post">
       <div class="form__item">
-        <p class="form__option option">
-          <label class="option__title" for="name">Имя:*</label>
-          <input class="option__field" type="text" name="characteristics" id="name" value="Барсик" required>
+        <p class="form__option">
+          <label class="form__option-title" for="name">Имя:*</label>
+          <input class="form__option-field" type="text" name="characteristics" id="name" value="Барсик" required>
         </p>
-        <p class="form__option option">
-          <label class="option__title" for="weight">Вес (кг):*</label>
-          <input class="option__field" type="text" name="characteristics" id="weight" value="7" required>
+        <p class="form__option">
+          <label class="form__option-title" for="weight">Вес (кг):*</label>
+          <input class="form__option-field" type="text" name="characteristics" id="weight" value="7" required>
         </p>
-        <p class="form__option option">
-          <label class="option__title" for="age">Возраст (лет):</label>
-          <input class="option__field" type="text" name="characteristics" id="age" value="7">
+        <p class="form__option">
+          <label class="form__option-title" for="age">Возраст (лет):</label>
+          <input class="form__option-field" type="text" name="characteristics" id="age" value="7">
+        </p>
+      </div>
+      <div class="form__item wish">
+        <p class="form__option">
+          <input class="form__option-radio" type="radio" name="weight" id="slimming" value="slimming" checked>
+          <label class="form__option-title" for="slimming">Похудение</label>
+        </p>
+        <p class="form__option">
+          <input class="form__option-radio" type="radio" name="weight" id="gain" value="gain">
+          <label class="form__option-title" for="gain">Набор массы</label>
+        </p>
+        <p class="form__option">
+          <input class="form__option-radio" type="radio" name="weight" id="dontknow" value="dontknow">
+          <label class="form__option-title" for="dontknow">Не знаю (Нужен ваш совет)</label>
         </p>
       </div>
       <div class="form__item">
-        <p class="form__option option">
-          <input class="option__radio" type="radio" name="weight" id="slimming" value="slimming" checked>
-          <label class="option__title" for="slimming">Похудение</label>
+        <span class="form__item-title">Контактные данные (владельца кота)</span>
+        <p class="form__option">
+          <label class="form__option-title" for="email">E-mail:*</label>
+          <input class="form__option-field" type="email" name="contact" id="email" value="kuklachev@gmail.com" required>
         </p>
-        <p class="form__option option">
-          <input class="option__radio" type="radio" name="weight" id="gain" value="gain">
-          <label class="option__title" for="gain">Набор массы</label>
-        </p>
-        <p class="form__option option">
-          <input class="option__radio" type="radio" name="weight" id="dontknow" value="dontknow">
-          <label class="option__title" for="dontknow">Не знаю (Нужен ваш совет)</label>
+        <p class="form__option">
+          <label class="form__option-title" for="tel">Телефон:*</label>
+          <input class="form__option-field" type="tel" name="contact" id="tel" value="8 (960) 900-60-90" required>
         </p>
       </div>
-      <div class="form__item item">
-        <span class="item__title">Контактные данные (владельца кота)</span>
-        <p class="form__option option">
-          <label class="option__title" for="email">E-mail:*</label>
-          <input class="option__field" type="email" name="contact" id="email" value="kuklachev@gmail.com" required>
-        </p>
-        <p class="form__option option">
-          <label class="option__title" for="tel">Телефон:*</label>
-          <input class="option__field" type="tel" name="contact" id="tel" value="8 (960) 900-60-90" required>
-        </p>
+      <div class="form__item">
+        <label class="form__item-title" for="comment">Комментарий</label><br>
+        <textarea class="form__item-field" name="comment" id="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
       </div>
-      <div class="form__item item">
-        <label class="item__title" for="comment">Комментарий</label><br>
-        <textarea class="item__field" name="comment" id="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
-      </div>
-      <div class="form__item item">
-        <span class="item__title">Дополнительно</span>
-        <p class="form__option option">
-          <input class="option__checkbox" type="checkbox" name="extra" id="sweetener" checked>
-          <label class="option__title" for="sweetener">Сахарозаменитель</label>
+      <div class="form__item form__extra">
+        <span class="form__item-title">Дополнительно</span>
+        <p class="form__option">
+          <input class="form__option-checkbox" type="checkbox" name="extra" id="sweetener" checked>
+          <label class="form__option-title" for="sweetener">Сахарозаменитель</label>
         </p>
-        <p class="form__option option">
-          <input class="option__checkbox" type="checkbox" name="extra" id="water">
-          <label class="option__title" for="water">Питьевая вода</label>
+        <p class="form__option">
+          <input class="form__option-checkbox" type="checkbox" name="extra" id="water">
+          <label class="form__option-title" for="water">Питьевая вода</label>
         </p>
-        <p class="form__option option">
-          <input class="option__checkbox" type="checkbox" name="extra" id="milk">
-          <label class="option__title" for="milk">Молоко</label>
+        <p class="form__option">
+          <input class="form__option-checkbox" type="checkbox" name="extra" id="milk">
+          <label class="form__option-title" for="milk">Молоко</label>
         </p>
-        <p class="form__option option">
-          <input class="option__checkbox" type="checkbox" name="extra" id="vitamins">
-          <label class="option__title" for="vitamins">Витамины</label>
+        <p class="form__option">
+          <input class="form__option-checkbox" type="checkbox" name="extra" id="vitamins">
+          <label class="form__option-title" for="vitamins">Витамины</label>
         </p>
       </div>
       <button class="form__button button" type="button">Отправить заявку</button>
@@ -101,11 +101,11 @@
     <span class="page-main__required">* — Обязательные поля</span>
   </main>
   <footer class="page-footer">
-    <section class="page-footer__contacts contacts">
+    <section class="contacts">
       <h2 class="contacts__heading">Приглашаем к сотрудничеству дилеров!</h2>
       <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
-    <section class="page-footer__map">
+    <section class="map">
       <h2 class="visually-hidden">Карта</h2>
       <img src="https://via.placeholder.com/320x362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </section>
@@ -113,21 +113,21 @@
       <div class="page-footer__logo">
         <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
       </div>
-      <section class="page-footer__social social">
+      <section class="social">
         <h2 class="visually-hidden">Давайте дружить!</h2>
         <ul class="social__list list">
-          <li class="social__item list__item">
+          <li class="social__item">
             <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
           </li>
-          <li class="social__item list__item">
+          <li class="social__item">
             <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
           </li>
-          <li class="social__item list__item">
+          <li class="social__item">
             <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
           </li>
         </ul>
       </section>
-      <section class="page-footer__copyright copyright">
+      <section class="copyright">
         <h2 class="visually-hidden">Разработано</h2>
         <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
