--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Интернет магазин «Кэт энерджи»</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,13 +18,13 @@
       </a>
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-navigation__list list">
-        <li class="main-navigation__item list__item list__item--current">
+        <li class="main-navigation__item main-navigation__item--current">
           <a class="list__link">Главная</a>
         </li>
-        <li class="main-navigation__item list__item">
+        <li class="main-navigation__item">
           <a class="list__link" href="catalog.html">Каталог продукции</a>
         </li>
-        <li class="main-navigation__item list__item">
+        <li class="main-navigation__item">
           <a class="list__link" href="form.html">Подбор программы</a>
         </li>
       </ul>
@@ -41,12 +40,12 @@
       </div>
       <button class="presentation__button button" type="button">Подобрать программу</button>
       <ul class="presentation__list list">
-        <li class="presentation__item list__item">
+        <li class="presentation__item">
           <h2 class="presentation__item__heading">Похудение</h2>
           <p class="presentation__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="presentation__link" href="#">Каталог slim</a>
         </li>
-        <li class="presentation__item list__item">
+        <li class="presentation__item">
           <h2 class="presentation__item__heading">Набор массы</h2>
           <p class="presentation__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="presentation__link" href="#">Каталог pro</a>
@@ -56,16 +55,16 @@
     <section class="features">
       <h2 class="features__heading">Как это работает</h2>
       <ul class="features__list list">
-        <li class="features__item list__item">
+        <li class="features__item">
           <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
-        <li class="features__item list__item">
+        <li class="features__item">
           <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
-        <li class="features__item list__item">
+        <li class="features__item">
           <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
-        <li class="features__item list__item">
+        <li class="features__item">
           <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
@@ -96,11 +95,11 @@
     </section>
   </main>
   <footer class="page-footer">
-    <section class="page-footer__contacts contacts">
+    <section class="contacts">
       <h2 class="contacts__heading">Приглашаем к сотрудничеству дилеров!</h2>
       <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
-    <section class="page-footer__map">
+    <section class="map">
       <h2 class="visually-hidden">Карта</h2>
       <img src="https://via.placeholder.com/320x362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </section>
@@ -108,21 +107,21 @@
       <div class="page-footer__logo">
         <img src="https://via.placeholder.com/128x24" alt="Интернет магазин «Кэт энерджи»">
       </div>
-      <section class="page-footer__social social">
+      <section class="social">
         <h2 class="visually-hidden">Давайте дружить!</h2>
         <ul class="social__list list">
-          <li class="social__item list__item">
+          <li class="social__item">
             <a class="social__link social__link--vkontakte" href="#">Мы в Вконтакте</a>
           </li>
-          <li class="social__item list__item">
+          <li class="social__item">
             <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
           </li>
-          <li class="social__item list__item">
+          <li class="social__item">
             <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
           </li>
         </ul>
       </section>
-      <section class="page-footer__copyright copyright">
+      <section class="copyright">
         <h2 class="visually-hidden">Разработано</h2>
         <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
