--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,14 @@
 
 <body class="page__body">
   <header class="page-header">
-    <nav class="main-navigation">
-      <div class="main-navigation__wrapper">
-        <a class="main-navigation__logo">
-          <img src="https://via.placeholder.com/33x37" width="33" height="37" alt="Интернет магазин «Кэт энерджи»">
-          <img src="https://via.placeholder.com/101x18" width="101" height="18" alt="Интернет магазин «Кэт энерджи»">
-        </a>
-        <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      </div>
+    <a class="page-header__logo">
+      <img src="https://via.placeholder.com/33x37" width="33" height="37" alt="Интернет магазин «Кэт энерджи»">
+    </a>
+    <a class="page-header__logo-second">
+      <img src="https://via.placeholder.com/101x18" width="101" height="18" alt="Интернет магазин «Кэт энерджи»">
+    </a>
+    <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+      <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-navigation__list list">
         <li class="main-navigation__item main-navigation__item--current">
           <a class="list__link">Главная</a>
@@ -33,83 +33,87 @@
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">«Кэт энерджи» - спортивное питание для ваших любимцев</h1>
-    <section class="presentation">
+    <section class="presentation container">
       <h2 class="presentation__heading">Функциональное питание для котов</h2>
       <p class="presentation__slogan">Занялся собой? Займись котом!</p>
-      <div class="presentation__image">
-        <img src="https://via.placeholder.com/280x270" alt="Пример упаковки спортивного питания для котов">
+      <div class="presentation__container-image">
+        <img class="image" src="https://via.placeholder.com/280x270" alt="Пример упаковки спортивного питания для котов">
       </div>
       <button class="presentation__button button" type="button">Подобрать программу</button>
-      <ul class="presentation__list list">
+      <ul class="presentation__list list container">
         <li class="presentation__item">
           <h2 class="presentation__item__heading">Похудение</h2>
-          <p class="presentation__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <p class="presentation__text text-content">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="presentation__link" href="#">Каталог slim</a>
         </li>
         <li class="presentation__item">
           <h2 class="presentation__item__heading">Набор массы</h2>
-          <p class="presentation__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <p class="presentation__text text-content">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="presentation__link" href="#">Каталог pro</a>
         </li>
       </ul>
     </section>
-    <section class="features">
+    <section class="features container">
       <h2 class="features__heading">Как это работает</h2>
       <ul class="features__list list">
         <li class="features__item">
-          <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
+          <p class="features__text text-content">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
         <li class="features__item">
-          <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          <p class="features__text text-content">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
         <li class="features__item">
-          <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          <p class="features__text text-content">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="features__item">
-          <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <p class="features__text text-content">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
     </section>
     <section class="example">
-      <div class="example__wrapper">
+      <div class="example__wrapper container">
         <h2 class="example__heading">Живой пример</h2>
-        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="example__item">
-          <span class="example__quantity">5 кг</span>
-          <span class="example__result">Снижение веса</span>
-        </div>
-        <div class="example__item">
-          <span class="example__quantity">60 дней</span>
-          <span class="example__result">Затрачено времени</span>
-        </div>
+        <p class="example__text text-content">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <ul class="example__list list">
+          <li class="example__item">
+            <div class="example__quantity">5 кг</div>
+            <div class="example__result text-content">Снижение<br class="mobile-break"> веса</div>
+          </li>
+          <li class="example__item">
+            <div class="example__quantity">60 дней</div>
+            <div class="example__result text-content">Затрачено времени</div>
+          </li>
+        </ul>
         <p class="example__cost">Затраты на питание: 15 000 руб.</p>
       </div>
-      <div class="example__slider slider">
-        <div class="slider__image-before">
-          <img src="https://via.placeholder.com/311x232" alt="Кот Борис до приёма нашего корма">
-        </div>
-        <div class="slider__image-after">
-          <img src="https://via.placeholder.com/251x240" alt="Кот Борис после приёма нашего корма">
+      <div class="example__slider">
+        <div class="slider__image">
+          <img src="https://via.placeholder.com/311x232" width="311" height="232" alt="Кот Борис">
         </div>
         <span class="slider__before">Было</span>
-        <div class="slider__range"></div>
+        <div class="slider__line">
+          <div class="slider-range"></div>
+        </div>
+        <div class="slider__scale">
+          <div class="slider-toggle"></div>
+        </div>
         <span class="slider__after">Стало</span>
       </div>
     </section>
   </main>
   <footer class="page-footer">
-    <section class="contacts">
-      <h2 class="contacts__heading">Приглашаем к сотрудничеству дилеров!</h2>
-      <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    <section class="contacts container">
+      <h2 class="contacts__heading">Приглашаем <br> к сотрудничеству дилеров!</h2>
+      <p class="contacts__text text-content">ул. Большая<br> Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <section class="map">
       <h2 class="visually-hidden">Карта</h2>
       <img src="https://via.placeholder.com/320x362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </section>
-    <div class="page-footer__wrapper">
-      <div class="page-footer__logo">
+    <div class="page-footer__wrapper container">
+      <a class="page-footer__logo">
         <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Интернет магазин «Кэт энерджи»">
-      </div>
+      </a>
       <section class="social">
         <h2 class="visually-hidden">Давайте дружить!</h2>
         <ul class="social__list list">
@@ -126,13 +130,16 @@
       </section>
       <section class="copyright">
         <h2 class="visually-hidden">Разработано</h2>
-        <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-          <span>HTML Academy</span>
+        <a class="copyright__button button-text text-content" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+          HTML Academy
+        </a>
+        <a class="copyright__button button-icon" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <img src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </section>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
